--- a/lesson-02.html
+++ b/lesson-02.html
@@ -22,6 +22,16 @@
             <p>Код товара: 195434</p>
         </div>
         <div class="product-card__rating">
+            <div class="stars">
+                <div class="star star-active"></div>
+                <div class="star star-active"></div>
+                <div class="star star-active"></div>
+                <div class="star star-active"></div>
+                <div class="star star-not-active"></div>
+            </div>
+            <div class="rating-info">
+                <p>Отзывов: 5</p>
+            </div>
 
         </div>
         <div class="product-card__cost">
