--- a/lesson-02.html
+++ b/lesson-02.html
@@ -13,13 +13,14 @@
 <body>
     <section class="product-card">
         <div class="product-card__img">
-            <img src="img/product.png" alt="Моноблок APPLE A1419 iMac 27 Retina 5K (MNED2UA/A)">
+            <img src="img/APPLE-A1419-iMac-27-Retina-5K.png" alt="Моноблок APPLE A1419 iMac 27 Retina 5K (MNED2UA/A)" title="APPLE  iMac 27 A1419 Retina 5K (MNED2UA/A)">
         </div>
         <div class="product-card__description">
             <p>Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</p>
         </div>
         <div class="product-card__article">
-            <p>Код товара: 195434</p>
+            <p>Код товара:&nbsp;</p>
+            <p id="product-card__article">195434</p>
         </div>
         <div class="product-card__rating">
             <div class="stars">
@@ -30,7 +31,8 @@
                 <div class="star star-not-active"></div>
             </div>
             <div class="rating-info">
-                <p>Отзывов: 5</p>
+                <p>Отзывов:&nbsp;</p>
+                <p id="rating-info">5</p>
             </div>
 
         </div>
@@ -38,8 +40,8 @@
             <p>Цена:</p>
             <p id="product-card__cost">69 999 грн</p>
         </div>
-        <div class="product-card__buy">
-
+        <div class="product-card__buy" title="Перейти к оформлению покупки APPLE A1419 iMac 27 Retina 5K (MNED2UA/A)">
+            <div class="product-card__buy-text">Купить</div>
         </div>
     </section>
 </body>
